# SomeRustProjects

./: README.md
ChatServer/chat_serv/: Cargo.toml
ChatServer/chat_serv/src/: j_read.rs  j_write.rs  main.rs
CommandLineArgumentParser/clapPr/: Cargo.toml
CommandLineArgumentParser/clapPrUpdated/clapPrUpd/: Cargo.toml
CommandLineArgumentParser/clapPrUpdated/clapPrUpd/src/: main.rs
DieselDatabaseORM/shop_base/: Cargo.toml
DieselDatabaseORM/shop_base/src/: cli.rs  lib.rs  models.rs
ErrorHandling/pgrep/: Cargo.toml
ErrorHandling/pgrep/src/: main.rs
ErrorHandling/pgrep/test_data/: t1.txt
TokioAndFutures/chatbox/: Cargo.toml
TokioAndFutures/chatbox/src/: lib.rs
WebsiteBuiltOnActix/shop_site/: Cargo.toml
WebsiteBuiltOnActix/shop_site/src/: main.rs
WebsiteBuiltOnActix/shop_site/test_site/static/: index.html
