[package]
name = "clapPr-dont-use-test"
version = "0.1.0"
edition = "2021"
author = "bugrakara"
license = "MIT"
keywords = ["Parse", "Markdown"]
description = "Read a markdown file and return a parsed html file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pulldown-cmark = "0.4.1"
maud = "0.20.0"